--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,24 @@
   <body>
     <header>
       <nav class="flex">
-        <div class="flex" style="gap: 30px;">
+        <div class="flex" style="gap: 20px">
+          <div class="mobile-menu">
+            <svg
+              width="30px"
+              height="30px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M4 6H20M4 12H20M4 18H20"
+                stroke="#000000"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
           <img class="logo" src="./images/logo.png" alt="" />
           <button class="search-laptop flex">
             <svg
@@ -21,7 +38,7 @@
             >
               <path
                 d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
-                stroke="#000000"
+                stroke="#85889C"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -37,7 +54,7 @@
             >
               <path
                 d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
-                stroke="#000000"
+                stroke="#85889C"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
