--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,6 +38,7 @@
   </div>
 
   <div class="contenedor">
+    
     <div class="principal">
       <div class="popular">
         <div class="populartop">
@@ -50,7 +51,7 @@
             <div class="sectiontext">
                 <p class="p1">Duolingo Bots</p>
                 <p class="p2">AI powered characteres to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
             </div>
             <div class="sectionphone"><button>IPHONE</button> + 2</div>
         </div>
@@ -58,26 +59,23 @@
         <div class="popularsection">
             <div><img src="images/popular-this-week/app-2.png" alt="" class="sectionimg"></div>
             <div class="sectiontext">
-                <p class="p1">Duolingo Bots</p>
-                <p class="p2">AI powered characteres to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <p class="p1">Tribe 2.0</p>
+                <p class="p2">Introducing AUgmented Messaging</p>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 1466</button><button><img src="images/comments.png" alt=""> 188</button></div>
             </div>
-            <div class="sectionphone"><button>IPHONE</button> + 2</div>
+            <div class="sectionphone"><button>ANDROID</button> + 4</div>
         </div>
         <div class="fullline"></div>
         <div class="popularsection">
             <div><img src="images/popular-this-week/app-3.png" alt="" class="sectionimg"></div>
             <div class="sectiontext">
-                <p class="p1">Duolingo Bots</p>
-                <p class="p2">AI powered characteres to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <p class="p1">Workplace by Facebook</p>
+                <p class="p2">Connect everyone in your company and turn ideas into action</p>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 1003</button><button><img src="images/comments.png" alt=""> 80</button></div>
             </div>
-            <div class="sectionphone"><button>IPHONE</button> + 2</div>
+            <div class="sectionphone"><button>ANDROID</button> + 2</div>
         </div>
       </div>
-
-
-
 
       <div class="today">
         <div class="todaytop">
@@ -88,31 +86,30 @@
         <div class="todaysection">
             <div><img src="images/today/app-1.png" alt="" class="sectionimg"></div>
             <div class="sectiontext">
-                <p class="p1">Duolingo Bots</p>
-                <p class="p2">AI powered characters to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <p class="p1">Sprayscape</p>
+                <p class="p2"></p>A perfectly imperfect VR-ish camera experiment, by Google</p>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 82</button><button><img src="images/comments.png" alt=""> 8</button></div>
             </div>
-            <div class="sectionphone"><button>IPHONE</button> + 2</div>
+            <div class="sectionphone"><button>ANDROID</button> + 3</div>
         </div>
         <div class="fullline"></div>
         <div class="todaysection">
             <div><img src="images/today/app-2.png" alt="" class="sectionimg"></div>
             <div class="sectiontext">
-                <p class="p1">Duolingo Bots</p>
-                <p class="p2">AI powered characters to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <p class="p1">Ask Gary Vee</p>
+                <p class="p2">The unofficial Gary Vee persona chatbot on Messenger!</p>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 21</button><button><img src="images/comments.png" alt=""> 9</button></div>
             </div>
-            <div class="sectionphone"><button>IPHONE</button> + 2</div>
+            <div class="sectionphone"><button>GET SHIT DONE</button> + 1</div>
         </div>
         <div class="fullline"></div>
         <div class="todaysection">
             <div><img src="images/today/app-3.png" alt="" class="sectionimg"></div>
             <div class="sectiontext">
-                <p class="p1">Duolingo Bots</p>
-                <p class="p2">AI powered characters to teach languages conversation</p>
-                <div class="sectionbuttons"><button>1460</button><button><img src="images/comments.png" alt=""> 49</button></div>
+                <p class="p1">The Electron Wheel</p>
+                <p class="p2">Turn your standard bycicle into an electric bike.</p>
+                <div class="sectionbuttons"><button><img src="images/votes.png" alt=""> 23</button><button><img src="images/comments.png" alt=""> 2</button></div>
             </div>
-            <div class="sectionphone"><button>IPHONE</button> + 2</div>
         </div>
       </div>
       
