--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,8 +10,9 @@
 
   <body>
     <header>
-      <nav class="flex">
-        <div class="flex" style="gap: 20px">
+      <nav class="flex" style="width: 100%;">
+        <div class="flex nav-container">
+        <div class="flex" style="gap: 20px;">
           <div class="mobile-menu">
             <svg
               width="30px"
@@ -189,6 +190,7 @@
             </svg>
             Sign in
           </button>
+        </div>
         </div>
       </nav>
     </header>
